tests/machine/x/ocaml/group_by_conditional_sum.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_conditional_sum.ml", line 21, characters 47-50:
21 | type record1 = { mutable cat : string; mutable val : int; mutable flag : bool }
                                                    ^^^
Error: Syntax error


Context (around line 21):
  19 | type ('k,'v) group = { key : 'k; items : 'v list }
  20 | 
  21 | type record1 = { mutable cat : string; mutable val : int; mutable flag : bool }
  22 | type record2 = { mutable cat : Obj.t; mutable share : float }
  23 | 
